Bulk Commit , Integration REST API for Batch Job Invocation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,4 @@ spring.datasource.username=dasarathi
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 ##################################################################
+spring.batch.job.enabled=false
