--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 		<relativePath />
 	</parent>
 	<groupId>com.dasarathi.spring</groupId>
-	<artifactId>spring-boot-batch-service</artifactId>
+	<artifactId>spring-boot-batch</artifactId>
 	<version>0.0.1-dev</version>
 
 	<properties>
@@ -18,7 +18,13 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
 	</properties>
-
+	<distributionManagement>
+		<repository>
+			<id>github</id>
+			<name>GitHub DasarathiRout Apache Maven Packages</name>
+			<url>https://maven.pkg.github.com/DasarathiRout/spring-boot-batch</url>
+		</repository>
+	</distributionManagement>
 	<dependencies>
 		<!-- =================================================================================== -->
 		<dependency>
