Custom InfoContributor & rActuator EndPoint implementation. From application props & dynamic read of System EnvVars

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@
 spring.profiles.active=local
 server.servlet.context-path=/api/v1
 ##################################################################
+#management.endpoints.web.exposure.include=prometheus
 management.endpoints.web.exposure.include=*
 #management.endpoints.web.exposure.exclude=*
 management.endpoints.web.base-path=/spring/boot/actuator
@@ -20,3 +21,7 @@ spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 ##################################################################
 spring.batch.job.enabled=false
+##################################################################
+info.dasarathi.service.name = SpringBoot-Batch-Viz
+info.dasarathi.service.description = Spring Batch On Boot & Visualizations
+info.dasarathi.service.version = release.api.v2.1.1.1
