--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,11 @@
 spring.profiles.active=local
 server.servlet.context-path=/api/v1
 ##################################################################
-#management.endpoints.web.exposure.include=prometheus
-management.endpoints.web.exposure.include=*
+#logging.level.root=TRACE
+#logging.level.org.springframework=DEBUG
+##################################################################
 #management.endpoints.web.exposure.exclude=*
+management.endpoints.web.exposure.include=*
 management.endpoints.web.base-path=/spring/boot/actuator
 management.endpoint.shutdown.enabled=true
 management.endpoint.health.show-details=always
@@ -19,9 +21,11 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=dasarathi
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
 ##################################################################
 spring.batch.job.enabled=false
 ##################################################################
-info.dasarathi.service.name = SpringBoot-Batch-Viz
+info.dasarathi.service.name = Spring Boot Batch Actuator Visualization
 info.dasarathi.service.description = Spring Batch On Boot & Visualizations
 info.dasarathi.service.version = release.api.v2.1.1.1
